css and alignment fixed

--- a/src/assets/scss/core/tables/_table.scss
+++ b/src/assets/scss/core/tables/_table.scss
@@ -162,7 +162,7 @@
 /* custom css */
 .ServiceReport-imgcard {
   width: 270px;
-  height: 250px;
+  height: 225px;
   border-radius: 3%;
   overflow: hidden;
   box-shadow: 2px 2px 7px #dedede;
@@ -226,7 +226,7 @@
 }
 .licence-plate-userDetails li {
   display: flow-root;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.4rem;
 }
 
 .licence-plate-userDetails h5 {
@@ -648,4 +648,26 @@ label {
 
 .floatRight {
   float: right;
+}
+
+.licence-icon-padding {
+  padding-right: 5px;
+}
+
+.rdtPicker .rdtTimeToggle:before {
+  visibility: visible;
+  width: 100%;
+  height: 100%;
+  border-radius: 3px;
+  position: absolute;
+  top: 3px !important;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px !important;
+  font-weight: 600;
+  font: normal !important;
+  content: "Set Time " !important;
+  font-family: Open Sans, sans-serif !important;
 }
